# rusppims

./: Cargo.toml  LICENSE  ppims_db.sqlite  rustfmt.toml  todo.md
docs/: README.md
docs/.obsidian/: workspace.json
docs/APIs/: add_customer.md  check_customer_kyc.md  check_customer_limit.md  customer_registration_status.md  update_customer.md  update_customer_limit.md
frontend/: index.html
frontend/src/: App.tsx
frontend/src/pages/: AmazingScientists.tsx  Home.tsx  Login.tsx  PageContent.tsx  SideBar.tsx
frontend/src/pages/css/: home.css  login.css  pageContent.css  sidebar.css
src/: lib.rs  main.rs  server.rs  store.rs  utils.rs
src/core/: calc.rs  kyc.rs  mod.rs
src/database/: db.rs
src/routes/: add_customer.rs  check_customer.rs  check_customer_kyc.rs  check_customer_limit.rs  mod.rs  ping.rs  update_customer.rs  update_customer_limit.rs
src/ui/: dashboard_data.rs  login.rs  mod.rs
