[package]
name = "rusppims"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

[[bin]]
name = "rustppims"
path = "src/main.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"